--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,15 +14,17 @@
   <img src="" alt="">
   
   <ion-label position="stacked">Correo Electronico</ion-label>
-  <ion-input  ngModel #User="ngModel" name="User" minlength= "3"></ion-input>
+  <ion-input required ngModel #User="ngModel" name="User" minlength= "3"></ion-input>
  </ion-item>
 
  <ion-item>
    <ion-label position="stacked">Contraseña</ion-label>
-   <ion-input ngModel #User="ngModel" name="User" type="password" minlength= "3"></ion-input>
+   <ion-input required ngModel #User="ngModel" name="password" type="password" minlength= "3"></ion-input>
   
  </ion-item>
-  <ion-button type="submit" [disabled]=!forma.valid>ingresar</ion-button>
+  <ion-button expand="full" fill="outline" shape="round" type="submit" [disabled]=!forma.valid>ingresar</ion-button><br>
+  <ion-button class="izquierda" fill="outline" shape="round"  routerLink="/home/tabs/tab3" >invitado</ion-button>
+  <ion-button class="derecha" zize="large" fill="outline" shape="round" routerLink="/home/tabs/tab2">registro</ion-button> 
 </ion-card>
 </form>
 </ion-content>
