--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -38,4 +38,5 @@
         <ion-label>Theme Your App</ion-label>
       </ion-item>
     </ion-list>
+    <ion-button href='http://localhost:8100/'>Llegar a home</ion-button>
 </ion-content>
