--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar>
     <ion-title>
       Tab Three
+      <ion-button color="primary" href='http://localhost:8100/'>Volver a home</ion-button>
     </ion-title>
   </ion-toolbar>
 </ion-header>
