--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,3 +1,12 @@
 .img-tab2{
     text-align: center;
 }
+  
+
+.fondo {
+  background: #7044ff;
+}
+.centrado{
+    margin: 1px 80px 1px 50px;
+  }
+  
